force-app/main/default/objects/B2B_Commerce_Product_Link__c/B2B_Commerce_Product_Link__c.object-meta.xml
<CustomObject>
    <label>B2B Commerce Product Link</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>B2B Commerce Product Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Commerce Product Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>