force-app/main/default/objects/B2B_Commerce_Product_Link__c/fields/B2B_Schneider_SKU__c.field-meta.xml
<CustomField>
    <fullName>B2B_Schneider_SKU__c</fullName>
    <label>Schneider SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>