force-app/main/default/objects/B2B_Commerce_Product_Link__c/fields/B2B_Source_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Source_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source product to which another product is related</description>
    <inlineHelpText>Source product to which another product is related</inlineHelpText>
    <label>Source Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related Link to</relationshipLabel>
    <relationshipName>Outgoing_Product_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>