force-app/main/default/objects/B2B_Commerce_Product_Link__c/fields/B2B_Target_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Target_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Target product which is related to another product (e.g. is accessory for)</description>
    <inlineHelpText>Target product which is related to another product (e.g. is accessory for)</inlineHelpText>
    <label>Target Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related Link from</relationshipLabel>
    <relationshipName>Incoming_Product_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>