force-app/main/default/objects/B2B_Commerce_Product_Link__c/fields/B2B_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Type__c</fullName>
    <description>Type to define what kind of relation two entities have. This is further used to filter/display only specific relation types</description>
    <inlineHelpText>Type to define what kind of relation two entities have. This is further used to filter/display only specific relation types</inlineHelpText>
    <label>Relation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
            <value>
                <fullName>Spare Part</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Style Shades</fullName>
            </value>
            <value>
                <fullName>Demo to Chassis</fullName>
            </value>
            <value>
                <fullName>Lenses</fullName>
            </value>
            <value>
                <fullName>Clip-in</fullName>
            </value>
            <value>
                <fullName>Adapter</fullName>
            </value>
            <value>
                <fullName>Direct Glazing</fullName>
            </value>
            <value>
                <fullName>Special Variation Parent</fullName>
            </value>
            <value>
                <fullName>Lens Color</fullName>
            </value>
            <value>
                <fullName>Photo Sensation</fullName>
            </value>
            <value>
                <fullName>Blue Sensation</fullName>
            </value>
            <value>
                <fullName>Anti Reflection</fullName>
            </value>
            <value>
                <fullName>Hard Coating</fullName>
            </value>
            <value>
                <fullName>glazed to unglazed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>