force-app/main/default/objects/B2B_Commerce_Product_Link__c/validationRules/Prevent_circular_references.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_circular_references</fullName>
    <active>true</active>
    <errorConditionFormula>B2B_Source_Product__c == B2B_Target_Product__c</errorConditionFormula>
    <errorMessage>Product cannot link to itself.</errorMessage>
</ValidationRule>