force-app/main/default/objects/B2B_Commerce_Product_Link__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>B2B_Source_Product__c</columns>
    <columns>B2B_Target_Product__c</columns>
    <columns>B2B_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>