force-app/main/default/objects/B2B_Commerce_Product_Link__c/listViews/Related_Products.listView-meta.xml
<ListView>
    <fullName>Related_Products</fullName>
    <columns>NAME</columns>
    <columns>B2B_Source_Product__c</columns>
    <columns>B2B_Target_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>B2B_Type__c</field>
        <operation>equals</operation>
        <value>Related</value>
    </filters>
    <label>Related Products</label>
</ListView>